--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Sinopsis</h2>
-                    <p class="section-subheading text-muted">Una escalofriante historia de terror, asesinato y un mal desconocido consigue impactar incluso a los 
+                    <h3 class="section-subheading text-muted">Una escalofriante historia de terror, asesinato y un mal desconocido consigue impactar incluso a los 
                         experimentados investigadores de casos paranormales, Ed y Lorraine Warren. Uno de los casos más sensacionales de sus archivos comienza con la 
                         batalla por el alma de un joven y les lleva más allá de cualquier cosa que hayan visto antes, implicándoles en el primer juicio de los Estados Unidos 
                         donde Arne Cheyne Johnson, es acusado de asesinato tras haber sido poseído por un demonio.​
                         Todo esto ocurre en el 1981.
-                    </p>
+                    </h3>
                 </div>
                 <div class="row text-center">
                         <h1 class="my-3">Mira el trailer aquí: </h1>
@@ -264,31 +264,36 @@
         <section class="page-section bg-light" id="team">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Reseñas</h2>
-                    <h3 class="section-subheading text-muted">Aquí puedes ver las reseñas más recientes de la película.</h3>
+                    <h2 class="section-heading text-uppercase">Reparto</h2>
+                    <h3 class="section-subheading text-muted">Protagonistas</h3>
                 </div>
                 <div class="row">
                     <div class="col-lg-4">
                         <div class="team-member">
-                            <p><i>La historia se aleja de los lugares comunes de las casa embrujadas y se inclina hacia el territorio de los detectives y las sectas satánicas sólo 
-                                para conseguir el efecto de poner los ojos en blanco. Este pivote sólo sirve para inflamar el libreto, perpetuar las concepciones erróneas del 
-                                "pánico satánico" y alejarlo de la calidad realista que hizo a las dos películas tan cautivadoras. </i></p>
-                                <h5>Hannah Flint en Empire.</h5>
+                            <img class="mx-auto rounded-circle" src="assets/img/team/Patrick.jpg" alt="..." />
+                            <p>Patrick Wilson</p>
+                            <p class="text-muted">Ed Warren</p>
+                            <a class="btn btn-dark btn-social mx-2" href="https://twitter.com/patrickwilson73?lang=es"><span class="sr-only">Twitter</span><i class="fab fa-twitter"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://www.facebook.com/profile.php?id=100044514966182"><span class="sr-only">fb</span><i class="fab fa-facebook-f"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://www.instagram.com/thereelpatrickwilson/?hl=es"><span class="sr-only">Instagram</span><i class="fab fa-instagram"></i></a>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="team-member">
-                            <p><i>Chaves los pone (a los protagonistas) en escenas brillantemente ejecutadas, incluyendo una inolvidable secuencia en una morgue que pone a prueba 
-                                sus límites y no fracasa. Las actuaciones de horror no son reconocidas lo suficiente y Wilson y Farmiga se merecen cada aplauso que reciban.</i></p>
-                                <h5>Ian Sandwell en Digital Spy.</h5>
+                            <img class="mx-auto rounded-circle" src="assets/img/team/Vera.jpg" alt="..." />
+                            <p>Vera Farmiga</p>
+                            <p class="text-muted">Lorraine Warren</p>
+                            <a class="btn btn-dark btn-social mx-2" href="https://twitter.com/verafarmiga" title="titulo vera"><span class="sr-only">Twitter</span><i class="fab fa-twitter"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://www.facebook.com/VeraFarmiga/"><span class="sr-only"><span class="sr-only">Fb</span></span><i class="fab fa-facebook-f"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://www.instagram.com/verafarmiga/"><span class="sr-only"><span class="sr-only">Instagram</span></span><i class="fab fa-instagram"></i></a>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="team-member">
-                            <p><i>Las películas del universo del Conjuro son conocidas por sus sustos conforme demonios saltan hacia sus inocentes víctimas y a los Warrens y esta 
-                                más reciente entrega no rompe esa fórmula, aunque Chaves claramente disfruta estirar la tensión lo más posible, y despistando con la dirección para 
-                                mantener a las audiencias buscando algo aparentemente siniestro antes de gritarles en la cara.</i></p>
-                                <h5>Eammon James en Radio Times.</h5>
+                            <img class="mx-auto rounded-circle" src="assets/img/team/noloconocenisumadre.jpg" alt="..." />
+                            <p>Ruairi O'Connor</p>
+                            <p class="text-muted"> Arne Cheyenne Johnson</p>
+                            <a class="btn btn-dark btn-social mx-2" href="https://www.instagram.com/ruairijoconnor/?hl=es"><span class="sr-only">Instagram</span><i class="fab fa-instagram"></i></a>
                         </div>
                     </div>
                 </div>
@@ -370,8 +375,8 @@
                                         </li>
                                         <li>
                                             <a class="btn btn-dark btn-social mx-2" href="https://twitter.com/patrickwilson73?lang=es"><span class="sr-only">Twitter</span><i class="fab fa-twitter"></i></a>
-                                            <a class="btn btn-dark btn-social mx-2" href="https://www.facebook.com/profile.php?id=100044514966182">Facebook<i class="fab fa-facebook-f"></i></a>
-                                            <a class="btn btn-dark btn-social mx-2" href="https://www.instagram.com/thereelpatrickwilson/?hl=es">instagram<i class="fab fa-instagram"></i></a>
+                                            <a class="btn btn-dark btn-social mx-2" href="https://www.facebook.com/profile.php?id=100044514966182"><span class="sr-only">Facebook</span><i class="fab fa-facebook-f"></i></a>
+                                            <a class="btn btn-dark btn-social mx-2" href="https://www.instagram.com/thereelpatrickwilson/?hl=es"><span class="sr-only">Instagram</span><i class="fab fa-instagram"></i></a>
                                         </li>    
                                     </ul>
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
@@ -405,9 +410,9 @@
                                             Estadounidense
                                         </li>
                                         <p class="text-muted">Ed Warren</p>
-                                        <a class="btn btn-dark btn-social mx-2" href="https://twitter.com/patrickwilson73?lang=es">Twitter<i class="fab fa-twitter"></i></a>
-                                        <a class="btn btn-dark btn-social mx-2" href="https://www.facebook.com/profile.php?id=100044514966182">Facebook<i class="fab fa-facebook-f"></i></a>
-                                        <a class="btn btn-dark btn-social mx-2" href="https://www.instagram.com/thereelpatrickwilson/?hl=es">Instagram<i class="fab fa-instagram"></i></a>
+                                        <a class="btn btn-dark btn-social mx-2" href="https://twitter.com/patrickwilson73?lang=es"><span class="sr-only">Twitter</span><i class="fab fa-twitter"></i></a>
+                                        <a class="btn btn-dark btn-social mx-2" href="https://www.facebook.com/profile.php?id=100044514966182"><span class="sr-only">facebook</span><i class="fab fa-facebook-f"></i></a>
+                                        <a class="btn btn-dark btn-social mx-2" href="https://www.instagram.com/thereelpatrickwilson/?hl=es"><span class="sr-only">Instagram</span><i class="fab fa-instagram"></i></a>
                                     </ul>
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
                                         <i class="fas fa-times me-1"></i>
@@ -476,8 +481,8 @@
                                             <strong>Nacionalidad:</strong>
                                             Estadounidense
                                         </li>
-                                        <a class="btn btn-dark btn-social mx-2" href="https://twitter.com/sjerins?lang=en">Twitter <i class="fab fa-twitter"></i></a>
-                                        <a class="btn btn-dark btn-social mx-2" href="https://www.instagram.com/sterlingj123/">Instagram<i class="fab fa-instagram"></i></a>
+                                        <a class="btn btn-dark btn-social mx-2" href="https://twitter.com/sjerins?lang=en"><span class="sr-only">Twitter</span> <i class="fab fa-twitter"></i></a>
+                                        <a class="btn btn-dark btn-social mx-2" href="https://www.instagram.com/sterlingj123/"><span class="sr-only">Instagram</span><i class="fab fa-instagram"></i></a>
                                     </ul>
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
                                         <i class="fas fa-times me-1"></i>
@@ -509,8 +514,8 @@
                                             <strong>Nacionalidad:</strong>
                                             Americana
                                         </li>
-                                        <a class="btn btn-dark btn-social mx-2" href="https://twitter.com/_julianhilliard?lang=en">Twitter<i class="fab fa-twitter"></i></a>
-                                        <a class="btn btn-dark btn-social mx-2" href="https://www.instagram.com/iamjulianhilliard/?hl=en">Instagram<i class="fab fa-instagram"></i></a>
+                                        <a class="btn btn-dark btn-social mx-2" href="https://twitter.com/_julianhilliard?lang=en"><span class="sr-only">Twitter</span><i class="fab fa-twitter"></i></a>
+                                        <a class="btn btn-dark btn-social mx-2" href="https://www.instagram.com/iamjulianhilliard/?hl=en"><span class="sr-only">Instagram</span><i class="fab fa-instagram"></i></a>
                                     </ul>
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
                                         <i class="fas fa-times me-1"></i>
@@ -548,8 +553,8 @@
                                             <strong>Nationality:</strong>
                                             Sudafricano
                                         </li>
-                                        <a class="btn btn-dark btn-social mx-2" href="https://twitter.com/SHANNONKOOK?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor">Twitter<i class="fab fa-twitter"></i></a>
-                                        <a class="btn btn-dark btn-social mx-2" href="https://www.instagram.com/shannonkook/?hl=en">Instagram<i class="fab fa-instagram"></i></a>
+                                        <a class="btn btn-dark btn-social mx-2" href="https://twitter.com/SHANNONKOOK?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"><span class="sr-only">Twitter</span><i class="fab fa-twitter"></i></a>
+                                        <a class="btn btn-dark btn-social mx-2" href="https://www.instagram.com/shannonkook/?hl=en"><span class="sr-only">Instagram</span><i class="fab fa-instagram"></i></a>
                                     </ul>
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
                                         <i class="fas fa-times me-1"></i>
