--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="es">
     <head>
         <meta charset="utf-8" />
+        <meta name="google-site-verification" content="7SwKEL7L3otUgytmgNX3kpuRx1d-TeDqP72YO8SnUpU" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
+        <meta name="description" content="The Conjuring es una saga de películas americanas de horror paranormal, el último estreno es 'The Devil Made Me Do It',
+        ya disponible en cines." />
+        <meta name="author" content="Jorge Carreras y Raquel Alonso" />
         <title>THE CONJURING: THE DEVIL MADE ME DO IT</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
@@ -15,11 +17,10 @@
         <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
-        <link href="css/styles.css" rel="stylesheet" />
     </head>
     <body id="page-top">
         <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
+        <nav role="navigation" class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
             <div class="container">
                 <a class="navbar-brand" href="#page-top"><img src="assets/img/navbar-logo.png" alt="Logo de The Conjuring"/></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -45,7 +46,7 @@
             </div>
         </header>
         <!-- Sinopsis y trailer -->
-        <section class="page-section" id="sinopsis">
+        <section role="region" class="page-section" id="sinopsis">
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Sinopsis</h2>
@@ -65,7 +66,7 @@
             </div>
         </section>
         <!-- Actores-->
-        <section class="page-section bg-light" id="portfolio">
+        <section role="region" class="page-section bg-light" id="portfolio">
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Reparto</h2>
@@ -166,7 +167,7 @@
             </div>
         </section>
         <!-- Timeline movies-->
-        <section class="page-section" id="about">
+        <section role="region" class="page-section" id="about">
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Saga</h2>
@@ -260,8 +261,8 @@
                 </ul>
             </div>
         </section>
-        <!-- Reseñas-->
-        <section class="page-section bg-light" id="team">
+        <!-- Reviews -->
+        <section role="region" class="page-section bg-light" id="team">
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Reseñas</h2>
@@ -273,14 +274,14 @@
                             <p><i>La historia se aleja de los lugares comunes de las casa embrujadas y se inclina hacia el territorio de los detectives y las sectas satánicas sólo 
                                 para conseguir el efecto de poner los ojos en blanco. Este pivote sólo sirve para inflamar el libreto, perpetuar las concepciones erróneas del 
                                 "pánico satánico" y alejarlo de la calidad realista que hizo a las dos películas tan cautivadoras. </i></p>
-                                <h5>Hannah Flint en Empire.</h5>
+                                <p>Hannah Flint en Empire.</p>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="team-member">
                             <p><i>Chaves los pone (a los protagonistas) en escenas brillantemente ejecutadas, incluyendo una inolvidable secuencia en una morgue que pone a prueba 
                                 sus límites y no fracasa. Las actuaciones de horror no son reconocidas lo suficiente y Wilson y Farmiga se merecen cada aplauso que reciban.</i></p>
-                                <h5>Ian Sandwell en Digital Spy.</h5>
+                                <p>Ian Sandwell en Digital Spy.</p>
                         </div>
                     </div>
                     <div class="col-lg-4">
@@ -288,7 +289,7 @@
                             <p><i>Las películas del universo del Conjuro son conocidas por sus sustos conforme demonios saltan hacia sus inocentes víctimas y a los Warrens y esta 
                                 más reciente entrega no rompe esa fórmula, aunque Chaves claramente disfruta estirar la tensión lo más posible, y despistando con la dirección para 
                                 mantener a las audiencias buscando algo aparentemente siniestro antes de gritarles en la cara.</i></p>
-                                <h5>Eammon James en Radio Times.</h5>
+                                <p>Eammon James en Radio Times.</p>
                         </div>
                     </div>
                 </div>
@@ -297,9 +298,8 @@
                 </div>
             </div>
         </section>
-        <!-- Gallery-->
         <!-- Footer-->
-        <footer class="footer py-4">
+        <footer role="contentinfo" class="footer py-4">
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-lg-4 text-lg-start">
@@ -322,7 +322,7 @@
         </footer>
         <!-- Portfolio Modals-->
         <!-- Portfolio item 1 modal popup-->
-        <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
+        <div role="dialog" class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="close-modal" data-bs-dismiss="modal"><img src="assets/img/close-icon.svg" alt="Close modal" /></div>
@@ -364,7 +364,7 @@
             </div>
         </div>
         <!-- Portfolio item 2 modal popup-->
-        <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-hidden="true">
+        <div role="dialog" class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="close-modal" data-bs-dismiss="modal"><img src="assets/img/close-icon.svg" alt="Close modal" /></div>
@@ -401,7 +401,7 @@
             </div>
         </div>
         <!-- Portfolio item 3 modal popup-->
-        <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" aria-hidden="true">
+        <div role="dialog" class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="close-modal" data-bs-dismiss="modal"><img src="assets/img/close-icon.svg" alt="Close modal" /></div>
@@ -438,7 +438,7 @@
             </div>
         </div>
         <!-- Portfolio item 4 modal popup-->
-        <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true">
+        <div role="dialog" class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="close-modal" data-bs-dismiss="modal"><img src="assets/img/close-icon.svg" alt="Close modal" /></div>
@@ -477,7 +477,7 @@
             </div>
         </div>
         <!-- Portfolio item 5 modal popup-->
-        <div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" role="dialog" aria-hidden="true">
+        <div role="dialog" class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" role="dialog" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="close-modal" data-bs-dismiss="modal"><img src="assets/img/close-icon.svg" alt="Close modal" /></div>
@@ -512,7 +512,7 @@
             </div>
         </div>
         <!-- Portfolio item 6 modal popup-->
-        <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-hidden="true">
+        <div role="dialog" class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="close-modal" data-bs-dismiss="modal"><img src="assets/img/close-icon.svg" alt="Close modal" /></div>
